<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main_layout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:contentDescription="@string/contact_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_baseline_person_add_24"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <EditText
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_marginBottom="5dp"
        android:id="@+id/contact_name"
        android:hint="@string/enter_name"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:inputType="phone"
        android:autofillHints="phone"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/contact_number"
        android:hint="@string/enter_number"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/add_contact_button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_realtime_contact"
        />
    <Button
        android:id="@+id/read_realtime_button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_realtime"
        />

    <Button
        android:id="@+id/read_cell_button"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_cell"
         />




</LinearLayout>